--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,552 @@
+@charset "UTF-8";
+/**
+  Нормализация блочной модели
+ */
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
 
+/**
+  Убираем внутренние отступы слева тегам списков,
+  у которых есть атрибут class
+ */
+:where(ul, ol):where([class]) {
+  padding-left: 0;
+}
+
+/**
+  Убираем внешние отступы body и двум другим тегам,
+  у которых есть атрибут class
+ */
+body,
+:where(blockquote, figure):where([class]) {
+  margin: 0;
+}
+
+/**
+  Убираем внешние отступы вертикали нужным тегам,
+  у которых есть атрибут class
+ */
+:where(h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+dl):where([class]) {
+  margin-block: 0;
+}
+
+:where(dd[class]) {
+  margin-left: 0;
+}
+
+:where(fieldset[class]) {
+  margin-left: 0;
+  padding: 0;
+  border: none;
+}
+
+/**
+  Убираем стандартный маркер маркированному списку,
+  у которого есть атрибут class
+ */
+:where(ul[class]) {
+  list-style: none;
+}
+
+:where(address[class]) {
+  font-style: normal;
+}
+
+/**
+  Обнуляем вертикальные внешние отступы параграфа,
+  объявляем локальную переменную для внешнего отступа вниз,
+  чтобы избежать взаимодействие с более сложным селектором
+ */
+p {
+  --paragraphMarginBottom: 24px;
+  margin-block: 0;
+}
+
+/**
+  Внешний отступ вниз для параграфа без атрибута class,
+  который расположен не последним среди своих соседних элементов
+ */
+p:where(:not([class]):not(:last-child)) {
+  margin-bottom: var(--paragraphMarginBottom);
+}
+
+/**
+  Упрощаем работу с изображениями и видео
+ */
+img,
+video {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/**
+  Наследуем свойства шрифт для полей ввода
+ */
+input,
+textarea,
+select,
+button {
+  font: inherit;
+}
+
+html {
+  /**
+    Пригодится в большинстве ситуаций
+    (когда, например, нужно будет "прижать" футер к низу сайта)
+   */
+  height: 100%;
+  /**
+    Убираем скачок интерфейса по горизонтали
+    при появлении / исчезновении скроллбара
+   */
+  scrollbar-gutter: stable;
+}
+
+/**
+  Плавный скролл
+ */
+html,
+:has(:target) {
+  scroll-behavior: smooth;
+}
+
+body {
+  /**
+    Пригодится в большинстве ситуаций
+    (когда, например, нужно будет "прижать" футер к низу сайта)
+   */
+  min-height: 100%;
+  /**
+    Унифицированный интерлиньяж
+   */
+  line-height: 1.5;
+}
+
+/**
+  Нормализация высоты элемента ссылки при его инспектировании в DevTools
+ */
+a:where([class]) {
+  display: inline-flex;
+}
+
+/**
+  Курсор-рука при наведении на элемент
+ */
+button,
+label {
+  cursor: pointer;
+}
+
+/**
+  Приводим к единому цвету svg-элементы
+  (за исключением тех, у которых уже указан
+  атрибут fill со значением 'none' или начинается с 'url')
+ */
+:where([fill]:not([fill=none],
+[fill^=url])) {
+  fill: currentColor;
+}
+
+/**
+  Приводим к единому цвету svg-элементы
+  (за исключением тех, у которых уже указан
+  атрибут stroke со значением 'none')
+ */
+:where([stroke]:not([stroke=none],
+[stroke^=url])) {
+  stroke: currentColor;
+}
+
+/**
+  Чиним баг задержки смены цвета при взаимодействии с svg-элементами
+ */
+svg * {
+  transition-property: fill, stroke;
+}
+
+/**
+  Приведение рамок таблиц в классический 'collapse' вид
+ */
+:where(table) {
+  border-collapse: collapse;
+  border-color: currentColor;
+}
+
+/**
+  Удаляем все анимации и переходы для людей,
+  которые предпочитают их не использовать
+ */
+@media (prefers-reduced-motion: reduce) {
+  *,
+  ::before,
+  ::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+@font-face {
+  font-family: "Eastman";
+  src: url("../fonts/Eastman-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Kumbh Sans";
+  src: url("../fonts/Eastman-Medium.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Kumbh Sans";
+  src: url("../fonts/Eastman-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Kumbh Sans";
+  src: url("../fonts/Eastman-Black.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+:root {
+  --color-light: #FFFFFF;
+  --color-baige: #FAF8F4;
+  --color-accent-baige: #FFE8C7;
+  --color-dark: #323231;
+  --color-dark-70: #6E6E6C;
+  --color-dark-50: #989897;
+  --color-gray: #E9E9E7;
+  --color-red: #E13B22;
+  --color-dark-red: #CF361F;
+  --color-blue: #2258E1;
+  --font-family: "Eastman", sans-serif;
+  --container-width: 75rem;
+  --container-padding-x: 1rem;
+  --transition-duration: 0.2s;
+}
+
+.container {
+  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+  margin-inline: auto;
+  padding-inline: var(--container-padding-x);
+}
+
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
+@media (width <= 48.06125rem) {
+  .hidden-mobile {
+    display: none !important;
+  }
+}
+
+@media (width > 48.06125rem) {
+  .visible-mobile {
+    display: none !important;
+  }
+}
+
+html.is-lock {
+  overflow: hidden;
+}
+
+body {
+  font-size: clamp(0.875rem, 0.8112745098rem + 0.2614379085vw, 1.125rem);
+  font-family: var(--font-family);
+  display: flex;
+  flex-direction: column;
+  color: var(--color-dark);
+  background-color: var(--color-light);
+}
+
+main {
+  flex-grow: 1;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-dark);
+}
+
+a,
+button,
+label,
+input,
+textarea,
+select,
+svg * {
+  transition-duration: var(--transition-duration);
+}
+
+a {
+  color: inherit;
+}
+@media (any-hover: hover) {
+  a:hover {
+    color: var(--color-red);
+  }
+}
+@media (any-hover: none) {
+  a:active {
+    color: var(--color-red);
+  }
+}
+a[class] {
+  text-decoration: none;
+}
+
+:focus-visible {
+  outline: 0.125rem dashed var(--color-dark-70);
+  outline-offset: 0.25rem;
+  transition-duration: 0s !important;
+}
+
+a[aria-label],
+button[aria-label] {
+  position: relative;
+}
+a[aria-label]::before,
+button[aria-label]::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 2.75rem;
+  height: 2.75rem;
+  content: "";
+}
+
+.header {
+  background-color: var(--color-baige);
+  font-weight: 600;
+  position: sticky;
+  z-index: 100;
+  top: 0;
+}
+@media (width <= 48.06125rem) {
+  .header__logo {
+    width: 147px;
+    height: 40px;
+  }
+}
+.header__body-inner {
+  padding-block: 0.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 1rem;
+  border-bottom: 1px solid var(--color-gray);
+  font-size: 0.875rem;
+}
+@media (width <= 48.06125rem) {
+  .header__body-inner {
+    padding-block: 0.5rem;
+  }
+}
+@media (width > 48.06125rem) {
+  .header__overlay {
+    display: contents;
+  }
+}
+@media (width <= 48.06125rem) {
+  .header__overlay {
+    width: 100%;
+    background-color: var(--color-light);
+    position: fixed;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 3.5625rem;
+    padding: 1.5625rem;
+    padding-inline: 1rem;
+    transition-duration: var(--transition-duration);
+  }
+  .header__overlay:not(.is-active) {
+    opacity: 0;
+    visibility: hidden;
+    translate: 100%;
+  }
+}
+@media (width <= 48.06125rem) {
+  .header__menu {
+    overflow-y: auto;
+    width: 100%;
+    display: grid;
+    row-gap: 1.5rem;
+  }
+}
+.header__menu-list {
+  display: flex;
+  align-items: center;
+  column-gap: 1.5rem;
+  color: var(--color-dark-70);
+}
+@media (width <= 90.06125rem) {
+  .header__menu-list {
+    column-gap: 1rem;
+  }
+}
+@media (width <= 48.06125rem) {
+  .header__menu-list {
+    align-items: flex-start;
+    flex-direction: column;
+    row-gap: 0.5rem;
+  }
+}
+@media (width <= 48.06125rem) {
+  .header__menu-item {
+    position: relative;
+    width: 100%;
+    background-color: var(--color-baige);
+    border-radius: 0.75rem;
+    padding: 0.75rem;
+  }
+  .header__menu-item::after {
+    position: absolute;
+    right: 0.75rem;
+    content: "";
+    width: 16px;
+    height: 16px;
+    background: url("../../icons/arrow-right.svg");
+  }
+}
+@media (width <= 48.06125rem) and (any-hover: hover) {
+  .header__menu-item:hover {
+    color: var(--color-red);
+    transition-duration: var(--transition-duration);
+  }
+}
+@media (width <= 48.06125rem) and (any-hover: none) {
+  .header__menu-item:active {
+    color: var(--color-red);
+    transition-duration: var(--transition-duration);
+  }
+}
+.header__menu-link.is-active {
+  color: var(--color-red);
+  pointer-events: none;
+}
+.header__contact-link {
+  font-size: 1rem;
+}
+.header__contact-link--icon {
+  position: relative;
+}
+.header__contact-link--icon::after {
+  position: absolute;
+  right: 0;
+  content: "";
+  width: 24px;
+  height: 24px;
+  background: url("../../icons/whatsapp-gray.svg");
+}
+
+.burger-button {
+  width: 1.5rem;
+  height: 1.5rem;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.305rem 0.164375rem;
+  color: var(--color-dark);
+  background-color: transparent;
+  border: none;
+}
+@media (any-hover: hover) {
+  .burger-button:hover {
+    color: var(--color-red);
+  }
+}
+@media (any-hover: none) {
+  .burger-button:active {
+    color: var(--color-red);
+  }
+}
+.burger-button.is-active .burger-button__line:first-child {
+  rotate: 45deg;
+  transform-origin: 0;
+  translate: 0.18em -0.06em;
+}
+.burger-button.is-active .burger-button__line:nth-child(2) {
+  rotate: -45deg;
+}
+.burger-button.is-active .burger-button__line:last-child {
+  width: 0;
+}
+.burger-button__line {
+  width: 100%;
+  height: 0.125rem;
+  background-color: currentColor;
+  border-radius: 1rem;
+  transition-duration: var(--transition-duration);
+}
+
+.button {
+  display: inline-flex;
+  justify-content: center;
+  color: var(--color-light);
+  font-size: 1rem;
+  font-weight: 600;
+  padding-block: 0.75rem;
+  width: 100%;
+  white-space: nowrap;
+  background-color: var(--color-red);
+  border-radius: 1.5rem;
+  border: none;
+}
+@media (width > 48.06125rem) {
+  .button {
+    font-size: 1.125rem;
+    width: auto;
+    padding: 1rem 2rem;
+  }
+}
+@media (any-hover: hover) {
+  .button:hover {
+    background-color: var(--color-dark-red);
+    transition-duration: var(--transition-duration);
+  }
+}
+@media (any-hover: none) {
+  .button:active {
+    background-color: var(--color-dark-red);
+    transition-duration: var(--transition-duration);
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
