--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: 'Kumbh Sans';
+  font-family: 'Eastman';
   src: url("../fonts/Eastman-Medium.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-  font-family: 'Kumbh Sans';
+  font-family: 'Eastman';
   src: url("../fonts/Eastman-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-  font-family: 'Kumbh Sans';
+  font-family: 'Eastman';
   src: url("../fonts/Eastman-Black.woff2") format("woff2");
   font-weight: 900;
   font-style: normal;
