--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -13,6 +13,19 @@
   border-radius: rem(24);
   border: none;
 
+  &--white{
+    color: var(--color-dark);
+    background-color: var(--color-baige) !important;
+    border: rem(1) solid var(--color-gray);
+
+    @include hover{
+      border: rem(1) solid var(--color-dark);
+      background-color: var(--color-baige);
+      transition-duration: var(--transition-duration);
+    }
+
+  }
+
   @include mobile-above{
     font-size: rem(18);
     width: auto;
