--- a/styles/blocks/quiz.css
+++ b/styles/blocks/quiz.css
@@ -1,252 +1,1 @@
-.quiz {
-  padding: 3.75rem 0;
-}
-@media (width <= 63.99875rem) {
-  .quiz {
-    padding: 2.5rem 0;
-  }
-}
-.quiz__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-@media (width <= 63.99875rem) {
-  .quiz__wrapper {
-    justify-content: center;
-  }
-}
-.quiz__body {
-  display: flex;
-  flex-direction: column;
-  row-gap: 16px;
-}
-.quiz__title {
-  font-size: clamp(1.125rem, 1.0294117647rem + 0.3921568627vw, 1.5rem);
-  font-weight: 900;
-}
-.quiz__subtitle {
-  font-size: 1rem;
-}
-.quiz__progress {
-  width: 100%;
-  height: 0.125rem;
-  background-color: var(--color-gray);
-  border-radius: 0.125rem;
-}
-.quiz__progress-bar {
-  height: 100%;
-  background-color: var(--color-red);
-  width: 0;
-  transition: width 0.3s ease;
-  border-radius: 0.125rem;
-}
-.quiz__step {
-  display: none;
-}
-.quiz__step.active {
-  display: block;
-}
-.quiz__options-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 2.5rem;
-  margin-bottom: 1.5rem;
-}
-@media (width <= 63.99875rem) {
-  .quiz__options-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (width <= 48.06125rem) {
-  .quiz__options-container {
-    grid-template-columns: 1fr;
-  }
-}
-.quiz__options-container--onecol {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin-bottom: 1.5rem;
-}
-.quiz__option-item {
-  padding-block: 0.25rem;
-}
-.quiz__checkbox-container {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  column-gap: 0.75rem;
-}
-.quiz__option-label {
-  font-size: 16px;
-  line-height: 1.3;
-}
-.quiz__custom-checkbox {
-  width: 1.25rem;
-  aspect-ratio: 1;
-  border: 1px solid var(--color-gray);
-  border-radius: 0.375rem;
-  display: inline-block;
-  position: relative;
-  transition: all 0.2s ease;
-}
-.quiz__custom-checkbox::after {
-  content: "";
-  position: absolute;
-  opacity: 0;
-  left: 6px;
-  top: 3px;
-  width: 6px;
-  height: 9px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  transform: rotate(45deg);
-  transition: opacity 0.2s ease;
-}
-.quiz__radio-container {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  column-gap: 0.75rem;
-}
-.quiz__custom-radio {
-  width: 1.25rem;
-  aspect-ratio: 1;
-  border: 1px solid var(--color-gray);
-  border-radius: 0.375rem;
-  display: inline-block;
-  position: relative;
-  transition: all 0.2s ease;
-}
-.quiz__custom-radio::after {
-  content: "";
-  position: absolute;
-  opacity: 0;
-  left: 6px;
-  top: 3px;
-  width: 6px;
-  height: 9px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  transform: rotate(45deg);
-  transition: opacity 0.2s ease;
-}
-.quiz__radio-input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-.quiz__radio-input:checked + .quiz__custom-radio {
-  background-color: var(--color-red);
-  border-color: var(--color-red);
-}
-.quiz__radio-input:checked + .quiz__custom-radio::after {
-  opacity: 1;
-}
-.quiz__checkbox-input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-.quiz__checkbox-input:checked + .quiz__custom-checkbox {
-  background-color: var(--color-red);
-  border-color: var(--color-red);
-}
-.quiz__checkbox-input:checked + .quiz__custom-checkbox::after {
-  opacity: 1;
-}
-.quiz__step-title {
-  font-size: 18px;
-  margin-bottom: 20px;
-  color: #333;
-}
-.quiz__button-container {
-  display: flex;
-  justify-content: start;
-  column-gap: 0.75rem;
-}
-.quiz__button {
-  display: flex;
-  align-items: center;
-  border: none;
-  color: var(--color-light);
-  font-size: 0.875rem;
-  font-weight: 600;
-  column-gap: 0.5rem;
-  padding: 0.5rem 1.125rem;
-  background-color: var(--color-red);
-  border-radius: 1.5rem;
-}
-.quiz__button--back {
-  background-color: var(--color-baige) !important;
-  border: 1px solid var(--color-gray);
-  color: var(--color-dark);
-}
-.quiz__form-fields {
-  display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-}
-.quiz__form-field {
-  width: 23.625rem;
-  position: relative;
-}
-@media (width <= 63.99875rem) {
-  .quiz__form-field {
-    width: 100%;
-  }
-}
-.quiz__form-footer {
-  margin-top: 2.5rem;
-}
-.quiz__agreement {
-  width: 23.625rem;
-  font-size: 14px;
-  margin-bottom: 1.5625rem;
-}
-@media (width <= 63.99875rem) {
-  .quiz__agreement {
-    width: 100%;
-  }
-}
-.quiz__agreement span {
-  color: var(--color-blue);
-  cursor: pointer;
-}
-.quiz__success-message {
-  font-size: 18px;
-  margin-bottom: 30px;
-  color: #333;
-  font-weight: 600;
-}
-.quiz__results-title {
-  font-size: 16px;
-  margin-bottom: 0.75rem;
-}
-.quiz__results-content {
-  font-size: 1rem;
-  margin-bottom: 2.0625rem;
-}
-.quiz__results-content p {
-  display: flex;
-  column-gap: 0.75rem;
-  margin-bottom: 0;
-}
-
-.field__error {
-  position: absolute;
-  color: var(--color-red);
-  font-size: 12px;
-  margin-top: 4px;
-  left: 0;
-  bottom: -20px;
-}
-
-.field__control--error {
-  border-color: var(--color-red) !important;
-}
-.field__control--error:focus {
-  border-color: var(--color-red) !important;
-  box-shadow: 0 0 0 2px rgba(255, 59, 48, 0.25) !important;
-}
-
-/*# sourceMappingURL=quiz.css.map */
+.quiz{padding:3.75rem 0}@media(width <= 63.99875rem){.quiz{padding:2.5rem 0}}.quiz__wrapper{display:flex;justify-content:space-between}@media(width <= 63.99875rem){.quiz__wrapper{justify-content:center}}.quiz__body{display:flex;flex-direction:column;row-gap:16px}.quiz__title{font-size:clamp(1.125rem,1.0294117647rem + 0.3921568627vw,1.5rem);font-weight:900}.quiz__subtitle{font-size:1rem}.quiz__progress{width:100%;height:0.125rem;background-color:var(--color-gray);border-radius:0.125rem}.quiz__progress-bar{height:100%;background-color:var(--color-red);width:0;transition:width .3s ease;border-radius:0.125rem}.quiz__step{display:none}.quiz__step.active{display:block}.quiz__options-container{display:grid;grid-template-columns:repeat(3, 1fr);column-gap:2.5rem;margin-bottom:1.5rem}@media(width <= 63.99875rem){.quiz__options-container{grid-template-columns:repeat(2, 1fr)}}@media(width <= 48.06125rem){.quiz__options-container{grid-template-columns:1fr}}.quiz__options-container--onecol{display:grid;grid-template-columns:1fr;margin-bottom:1.5rem}.quiz__option-item{padding-block:0.25rem}.quiz__checkbox-container{display:flex;align-items:center;cursor:pointer;column-gap:0.75rem}.quiz__option-label{font-size:16px;line-height:1.3}.quiz__custom-checkbox{width:1.25rem;aspect-ratio:1;border:1px solid var(--color-gray);border-radius:0.375rem;display:inline-block;position:relative;transition:all .2s ease}.quiz__custom-checkbox::after{content:"";position:absolute;opacity:0;left:6px;top:3px;width:6px;height:9px;border:solid #fff;border-width:0 2px 2px 0;transform:rotate(45deg);transition:opacity .2s ease}.quiz__radio-container{display:flex;align-items:center;cursor:pointer;column-gap:0.75rem}.quiz__custom-radio{width:1.25rem;aspect-ratio:1;border:1px solid var(--color-gray);border-radius:0.375rem;display:inline-block;position:relative;transition:all .2s ease}.quiz__custom-radio::after{content:"";position:absolute;opacity:0;left:6px;top:3px;width:6px;height:9px;border:solid #fff;border-width:0 2px 2px 0;transform:rotate(45deg);transition:opacity .2s ease}.quiz__radio-input{position:absolute;opacity:0;cursor:pointer}.quiz__radio-input:checked+.quiz__custom-radio{background-color:var(--color-red);border-color:var(--color-red)}.quiz__radio-input:checked+.quiz__custom-radio::after{opacity:1}.quiz__checkbox-input{position:absolute;opacity:0;cursor:pointer}.quiz__checkbox-input:checked+.quiz__custom-checkbox{background-color:var(--color-red);border-color:var(--color-red)}.quiz__checkbox-input:checked+.quiz__custom-checkbox::after{opacity:1}.quiz__step-title{font-size:18px;margin-bottom:20px;color:#333}.quiz__button-container{display:flex;justify-content:start;column-gap:0.75rem}.quiz__button{display:flex;align-items:center;border:none;color:var(--color-light);font-size:0.875rem;font-weight:600;column-gap:0.5rem;padding:0.5rem 1.125rem;background-color:var(--color-red);border-radius:1.5rem}.quiz__button--back{background-color:var(--color-baige) !important;border:1px solid var(--color-gray);color:var(--color-dark)}.quiz__form-fields{display:flex;flex-direction:column;gap:1.25rem}.quiz__form-field{width:23.625rem;position:relative}@media(width <= 63.99875rem){.quiz__form-field{width:100%}}.quiz__form-footer{margin-top:2.5rem}.quiz__agreement{width:23.625rem;font-size:14px;margin-bottom:1.5625rem}@media(width <= 63.99875rem){.quiz__agreement{width:100%}}.quiz__agreement span{color:var(--color-blue);cursor:pointer}.quiz__success-message{font-size:18px;margin-bottom:30px;color:#333;font-weight:600}.quiz__results-title{font-size:16px;margin-bottom:0.75rem}.quiz__results-content{font-size:1rem;margin-bottom:2.0625rem}.quiz__results-content p{display:flex;column-gap:0.75rem;margin-bottom:0}/*# sourceMappingURL=quiz.css.map */
